Update .gitignore to exclude API key file

--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,9 @@ crashlytics-build.properties
 /[Aa]ssets/Unity.VisualScripting.Generated/VisualScripting.Flow/UnitOptions.db.meta
 /[Aa]ssets/Unity.VisualScripting.Generated/VisualScripting.Core/Property Providers
 /[Aa]ssets/Unity.VisualScripting.Generated/VisualScripting.Core/Property Providers.meta
+
+# OpenAI API Key Config
+Assets/Resources/Config/openai_config.json
+
+# OpenAI API Key Config
+Assets/StreamingAssets/openai_config.json
